<!--
  ~ Copyright (c) 2018.
  ~ Created for MSc in Computer Science - Distributed Systems
  ~ All right reserved except otherwise noted
  -->

<resources>
    <string name="app_name">DS-Spark client</string>
    <string name="exit_text">Πατήστε ΠΙΣΩ ακόμα μια φορά για έξοδο</string>
    <string name="ok_button">ΟΚ</string>
    <string name="cancel_button">Ακυρωση</string>
    <string name="total_buses">Total buses: %s</string>

    <!-- Drawer categories -->
    <string name="drawer_item_map">Χάρτης</string>
    <string name="drawer_item_line">Γραμμή λεωφορείου</string>

    <!-- Coordinates dialog -->
    <string name="coordinates_button">Manual\ncoordinates</string>
    <string name="coordinates_starting_lat">Starting Lat</string>
    <string name="coordinates_starting_long">Starting Long</string>
    <string name="coordinates_ending_lat">Ending Lat</string>
    <string name="coordinates_ending_long">Ending Long</string>

    <string name="ip_hint">Enter server\'s IP Address</string>

    <!-- Fragments -->
    <string name="choose_bus_line">Bus line ID</string>
    <string name="choose_bus_stop">Stop ID</string>
    <string name="choose_date">Search date:</string>
    <string name="input_is_required">Input is required!</string>
    <string name="please_wait">Please wait...</string>

</resources>
